# realtime-voice-assistant

./: .gitignore  PLAN.md  README.md  audio_in.py  audio_module.py  conversation_manager.py  llm_module.py  logsetup.py  main.py  pyproject.toml  speech_pipeline_manager.py  stt_module.py  system_prompt.txt  text_context.py  text_similarity.py  todo.md  transcribe.py  tts_module.py  turn_detection.py  turndetect.py  upsample_overlap.py
