[project]
name = "realtime-voice-assistant"
version = "0.1.0"
description = "Assistant vocal en temps réel en avec Whisper, Kokoro et Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "realtimestt==0.3.104",
    "realtimetts[kokoro]>=0.5.5",
    "requests>=2.32.5",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "nltk>=3.8.0",
    "sentence-transformers>=2.2.0",
    "pip>=25.3",
    "dotenv>=0.9.9",
]
